--- a/description.html
+++ b/description.html
@@ -8,7 +8,7 @@
 <script src="jquery-3.2.1.min.js"></script>
 <script src="description.js?_=46545663394"></script>
 <body onload="loadPackageInfo();loadRecentUpdates();">
-<span id="showAddRepo_" hidden><h2>anwarvipvip's Repo</h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvipvip.github.io/"><img class="icon" src="cydia7.png"/><label>Open Cydia</label></a></li></ul></span>
+<span id="showAddRepo_" hidden><h2>anwarvip's Repo</h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvip.github.io/"><img class="icon" src="cydia7.png"/><label>Open Cydia</label></a></li></ul></span>
 <p style="text-align:center;" id="showAddRepoUrl_" hidden>Repo: anwarvip.github.io/</p>
 <span id="tweakStatusInfo"><h2></h2><ul style="background:#c6e8ff"><center><li><p id="errorInfo">Loading Description...</p></li></center></ul></span>
 <span id="desc_short_" hidden><h2 id="name" hidden></h2><ul style="background:#c6e8ff"><center><li><p id="desc_short"></p></li></center></ul></span>
@@ -22,7 +22,7 @@
 <h2>Help Us</h2>
 <ul>
 	<li>
-		<a href="https://www.paypal.me/anwarvipvip" target="_blank">
+		<a href="https://www.paypal.me/anwarvip" target="_blank">
 			<img class="icon" src="pp.png"/>
 			<label>Donate</label>
 		</a>
@@ -31,13 +31,13 @@
 <h2>Social</h2>
 <ul>
 	<li>
-		<a href="https://github.com/anwarvipvip" target="_blank">
+		<a href="https://github.com/anwarvip" target="_blank">
 			<img class="icon" src="github.png"/>
 			<label>GitHub</label>
 		</a>
 	</li>
 	<li>
-		<a href="https://www.reddit.com/user/anwarvipvip" target="_blank">
+		<a href="https://www.reddit.com/user/anwarvip" target="_blank">
 			<img class="icon" src="reddit.png"/>
 			<label>Reddit</label>
 		</a>
