--- a/description.html
+++ b/description.html
@@ -50,5 +50,5 @@
 	</li>
 </ul>
 <span id="updates_" hidden><h2>Last Updates</h2><ul id="updates"></ul></span>
-<p style="text-align:center;">anwarvipvip © 2018</p>
+<p style="text-align:center;">anwarvip © 2018</p>
 </body></html>
