--- a/donate/index.html
+++ b/donate/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js">
 <head>
-  <title>julioverne's Donate</title>
+  <title>anwarvip's Donate</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title></title>
@@ -20,11 +20,11 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <section>
-    <h2>julioverne's Donate Page</h2>
+    <h2>anwarvip's Donate Page</h2>
     <section>
       <div class="row">
         <div class="example">
-          <h4>Help me, <br>For a long time, I have been using only one device, iPhone 5S, that i got help buying. Sadly, I broke it a few weeks ago. While i'm currently away, I decided to create a donation page to help my getting a new iPhone. Also, I hope we will get many years of cool stuff comes in our JB Comunity.<p style="float:right"><i>julioverne</i></p></h4>
+          <h4>Help me, <br>For a long time, I have been using only one device, iPhone 5S, that i got help buying. Sadly, I broke it a few weeks ago. While i'm currently away, I decided to create a donation page to help my getting a new iPhone. Also, I hope we will get many years of cool stuff comes in our JB Comunity.<p style="float:right"><i>anwarvip</i></p></h4>
           <pre><code data-language="html"></code></pre>
         </div>
         <div class="show">
@@ -69,7 +69,7 @@
 		}
 		});
 		$('#button_donate').on('click', function() {
-		    location.href = "https://paypal.me/julioverne";
+		    location.href = "https://paypal.me/anwarvip";
 		});
     });
   </script>
