--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 		</a>
 	</li>
 </ul>
+<ul>
+	<li>
+		<a href="sileo://url/https://sileo.coolstar.com/api/share#?source=http://anwarvip.github.io/">
+			<img class="icon" src="cydia7.png"/>
+			Open Cydia</label>
+		</a>
+	</li>
+</ul>
 <p style="text-align:center;">Repo: http://anwarvip.github.io/</p>
 <span id="updates_" hidden><h2>Last Updates</h2><ul id="updates"></ul></span>
 <h2>Help Us</h2>
