--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<li>
 		<a href="sileo://url/https://sileo.coolstar.com/api/share#?source=http://anwarvip.github.io/">
 			<img class="icon" src="cydia7.png"/>
-			Open Cydia</label>
+			Open sileo</label>
 		</a>
 	</li>
 </ul>
