--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</a>
 	</li>
 	<li>
-		<a href="sileo://url/https://sileo.coolstar.org/api/share#?source=http://anwarvip.github.io/">
+		<a href="sileo://url/https://sileo.coolstar.com/api/share#?source=http://anwarvip.github.io/">
 			<img class="icon" src="cydia7.png"/>
 			Open sileo</label>
 		</a>
