--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</a>
 	</li>
 	<li>
-		<a href="sileo://url/source=http://anwarvip.github.io/">
+		<a href="sileo:add=http://anwarvip.github.io/">
 			<img class="icon" src="cydia7.png"/>
 			Open sileo</label>
 		</a>
