--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	</li>
 </ul>
 <p style="text-align:center;">Repo: http://anwarvip.github.io/</p>
+<p style="text-align:center;">ستجد في هاذا السورس اهم الادواة من افضل السورسات الموثوق فيها مع وجود السورس الاصلي وتفاصيل الاداة</p>
+<p style="text-align:center;">دعم متجر sileo</p>
 <span id="updates_" hidden><h2>Last Updates</h2><ul id="updates"></ul></span>
 <h2>Help Us</h2>
 <ul>
