--- a/description.html
+++ b/description.html
@@ -45,7 +45,7 @@
 	<li>
 		<a href="https://twitter.com/anw_vip" target="_blank">
 			<img class="icon" src="twitter.png"/>
-			<label>Follow anwarvipvip</label>
+			<label>Follow anwarvip</label>
 		</a>
 	</li>
 </ul>
