--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <h2>anwarvip's Repo</h2>
 <ul>
 	<li>
-		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvip.github.io/">
+		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvip.github.io/3arab/">
 			<img class="icon" src="cydia7.png"/>
 			Open Cydia</label>
 		</a>
 	</li>
 </ul>
 <li>
-<p style="text-align:center;">Repo: http://anwarvip.github.io/</p>
+<p style="text-align:center;">Repo: http://anwarvip.github.io/3arab/</p>
 	</li>
 <li>
 <p style="text-align:center;">ستجد في هاذا السورس اهم الادواة من افضل السورسات الموثوق فيها مع وجود السورس الاصلي وتفاصيل الاداة</p>
