--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>anwarvip's Repo</h2>
 <ul>
 	<li>
-		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvip.github.io/3arab/">
+		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvip.github.io/">
 			<img class="icon" src="cydia7.png"/>
 			Open Cydia</label>
 		</a>
