--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</li>
 </ul>
 <li>
-<p style="text-align:center;">Repo: http://anwarvip.github.io/3arab/</p>
+<p style="text-align:center;">Repo: http://anwarvip.github.io/</p>
 	</li>
 <li>
 <p style="text-align:center;">ستجد في هاذا السورس اهم الادواة من افضل السورسات الموثوق فيها مع وجود السورس الاصلي وتفاصيل الاداة</p>
