--- a/description.html
+++ b/description.html
@@ -9,7 +9,7 @@
 <script src="description.js?_=46545663394"></script>
 <body onload="loadPackageInfo();loadRecentUpdates();">
 <span id="showAddRepo_" hidden><h2>anwarvip's Repo</h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvip.github.io/"><img class="icon" src="cydia7.png"/><label>Open Cydia</label></a></li></ul></span>
-<p style="text-align:center;" id="showAddRepoUrl_" hidden>Repo: anwarvip.github.io/</p>
+<p style="text-align:center;" id="showAddRepoUrl_" hidden>Repo: anwarvip.github.io/3rab/</p>
 <span id="tweakStatusInfo"><h2></h2><ul style="background:#c6e8ff"><center><li><p id="errorInfo">Loading Description...</p></li></center></ul></span>
 <span id="desc_short_" hidden><h2 id="name" hidden></h2><ul style="background:#c6e8ff"><center><li><p id="desc_short"></p></li></center></ul></span>
 <span id="compatitle_" hidden><ul style="background:#00ff24"><center><li><p><i>Compatible with <span id="compatitle"></span></i></p></li></center></ul></span>
@@ -30,25 +30,18 @@
 </ul>
 <h2>Social</h2>
 <ul>
+	
 	<li>
-		<a href="https://github.com/anwarvip" target="_blank">
-			<img class="icon" src="github.png"/>
-			<label>GitHub</label>
-		</a>
+		 <a href="mailto:3rab.sa@gmail.com" target="_blank">
+			<img class="icon" src="css/mail.png"/>
 	</li>
 	<li>
-		<a href="https://www.reddit.com/user/anwarvip" target="_blank">
-			<img class="icon" src="reddit.png"/>
-			<label>Reddit</label>
-		</a>
-	</li>
-	<li>
-		<a href="https://twitter.com/anw_vip" target="_blank">
+		<a href="https://twitter.com/3rab.sa" target="_blank">
 			<img class="icon" src="twitter.png"/>
 			<label>Follow anwarvip</label>
 		</a>
 	</li>
 </ul>
 <span id="updates_" hidden><h2>Last Updates</h2><ul id="updates"></ul></span>
-<p style="text-align:center;">anwarvip © 2018</p>
+<p style="text-align:center;">3rab © 2019</p>
 </body></html>
