--- a/description.html
+++ b/description.html
@@ -33,7 +33,8 @@
 	
 	<li>
 		 <a href="mailto:3rab.sa@gmail.com" target="_blank">
-			<img class="icon" src="css/mail.png"/>
+			<img class="icon" src="mail.png"/>
+		 </a>
 	</li>
 	<li>
 		<a href="https://twitter.com/3rab.sa" target="_blank">
