--- a/description.html
+++ b/description.html
@@ -34,6 +34,7 @@
 	<li>
 		 <a href="mailto:3rab.sa@gmail.com" target="_blank">
 			<img class="icon" src="mail.png"/>
+			 <label>Email 3rab.sa</label>
 		 </a>
 	</li>
 	<li>
