--- a/description.html
+++ b/description.html
@@ -12,7 +12,7 @@
 <p style="text-align:center;" id="showAddRepoUrl_" hidden>Repo: anwarvip.github.io/3rab/</p>
 <span id="tweakStatusInfo"><h2></h2><ul style="background:#c6e8ff"><center><li><p id="errorInfo">Loading Description...</p></li></center></ul></span>
 <span id="desc_short_" hidden><h2 id="name" hidden></h2><ul style="background:#c6e8ff"><center><li><p id="desc_short"></p></li></center></span>
-<span id="compatitle_" hidden><ul style="background:#b7f6c0"><center><li><p><i>Compatible with <span id="compatitle"></span></ul></i></p></li></center></ul></span>
+<span id="compatitle_" hidden></ul><ul style="background:#b7f6c0"><center><li><p><i>Compatible with <span id="compatitle"></span></i></p></li></center></ul></span>
 	
 <p style="text-align:center;font-size:10px;" id="compatitle_"><span id="your_ios" hidden></span></p>
 <span id="warning_" hidden><ul style="background:#ffff80"><center><li><p><span id="warning"></span></p></li></center></ul></span>
