--- a/description.html
+++ b/description.html
@@ -11,8 +11,8 @@
 <span id="showAddRepo_" hidden><h2>anwarvip's Repo</h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvip.github.io/"><img class="icon" src="cydia7.png"/><label>Open Cydia</label></a></li></ul></span>
 <p style="text-align:center;" id="showAddRepoUrl_" hidden>Repo: anwarvip.github.io/3rab/</p>
 <span id="tweakStatusInfo"><h2></h2><ul style="background:#c6e8ff"><center><li><p id="errorInfo">Loading Description...</p></li></center></ul></span>
-<span id="desc_short_" hidden><h2 id="name" hidden></h2><ul style="background:#c6e8ff"><center><p id="desc_short"></p></center></span>
-<span id="compatitle_" hidden><ul style="background:#b7f6c0"><center><li><p></ul><i>Compatible with <span id="compatitle"></span></li></p></li></center></ul></span>
+<span id="desc_short_" hidden><h2 id="name" hidden></h2><ul style="background:#c6e8ff"><center><p id="desc_short"></center></span>
+<span id="compatitle_" hidden><ul style="background:#b7f6c0"><center><li></ul><i>Compatible with <span id="compatitle"></span></li></p></li></center></ul></span>
 	
 <p style="text-align:center;font-size:10px;" id="compatitle_"><span id="your_ios" hidden></span></p>
 <span id="warning_" hidden><ul style="background:#ffff80"><center><li><p><span id="warning"></span></p></li></center></ul></span>
