--- a/description.html
+++ b/description.html
@@ -5,11 +5,9 @@
 <meta name='viewport' content='width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;'/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<script src="jquery-3.2.1.min.js"></script>
-<script src="description.js?_=46545663394"></script>
-	
-	
-	<script type="text/javascript">
+<script type="text/javascript"  src="jquery-3.2.1.min.js"></script>
+<script type="text/javascript"  src="description.js?_=46545663394"></script>
+<script type="text/javascript">
 	bundleid = $.QueryString['p'];
 
 	var contentBlocks = {
