--- a/description.html
+++ b/description.html
@@ -7,6 +7,10 @@
 </head>
 <script type="text/javascript"  src="jquery-3.2.1.min.js"></script>
 <script type="text/javascript"  src="description.js?_=46545663394"></script>
+<script type="text/javascript" src="jquery.querystring.js"></script>
+<script type="text/javascript" src="data-loader-engine.js"></script>
+<script type="text/javascript" src="ios_version_check.js"></script>	
+	
 <script type="text/javascript">
 	bundleid = $.QueryString['p'];
 
