--- a/description.html
+++ b/description.html
@@ -1,28 +1,16 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<title></title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="rstyle.css"/>
-	<script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/B4FBEEF3-32BF-7146-8723-2F33B08A9E12/main.js" charset="UTF-8"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	
-	<title>Description</title>
+<html><head>
+<title>Description</title>
 <link rel='stylesheet' type='text/css' href='ios7.css'/>
 <meta name='viewport' content='width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;'/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <script type="text/javascript"  src="jquery-3.2.1.min.js"></script>
 <script type="text/javascript"  src="description.js?_=46545663394"></script>
-
-	
-	
-	<script type="text/javascript" src="js/jquery.querystring.js"></script>
-	<script type="text/javascript" src="js/data-loader-engine.js"></script>
-	<script type="text/javascript" src="js/ios_version_check.js"></script>
-	<script type="text/javascript">
+<script type="text/javascript" src="js/jquery.querystring.js"></script>
+<script type="text/javascript" src="js/data-loader-engine.js"></script>
+<script type="text/javascript" src="js/ios_version_check.js"></script>
+<script type="text/javascript">
 	bundleid = $.QueryString['p'];
 
 	var contentBlocks = {
