--- a/description.html
+++ b/description.html
@@ -21,6 +21,7 @@
 <span id="warning_" hidden><ul style="background:#ffff80"><center><li><p><span id="warning"></span></p></li></center></ul></span>
 <span id="desc_long_" hidden><h2>Description</h2><ul><li><p id="desc_long"></p></li></ul></span>
 	
+<span id="Source_" hidden><h2>Description</h2><ul><li><p id="Source"></p></li></ul></span>	
 <span id="Source_" target="_blank"><p id="Source"></p></li></ul></span>
 	
 <span id="screenshot_" hidden><h2>Screenshot's</h2><ul><li><p id="screenshot"></p></li></ul></span>
