--- a/description.html
+++ b/description.html
@@ -19,7 +19,7 @@
 	
 <p style="text-align:center;font-size:10px;" id="compatitle_"><span id="your_ios" hidden></span></p>
 <span id="warning_" hidden><ul style="background:#ffff80"><center><li><p><span id="warning"></span></p></li></center></ul></span>
-<span id="desc_long_" hidden><h2>Description</h2><ul><li><p id="desc_long"></p></span>
+<span id="desc_long_" hidden><h2>Description</h2><ul><li><p id="desc_long"></p></li></span>
 <span id="screenshot_" hidden><h2>Screenshot's</h2><li><p id="screenshot"></p></li></ul></span>
 <span id="changelog_" hidden><h2>Changelog</h2><ul><li><p id="changelog"></p></li></ul></span>
 <h2>Help Us</h2>
