--- a/description.html
+++ b/description.html
@@ -41,7 +41,7 @@
 		 </a>
 	</li>
 	<li>
-		<a href="https://www.twitter.com/3rab.sa">Twitter
+		<a href="https://twitter.com/3rab.sa">Twitter
 		<a href="https://twitter.com/3rab.sa" target="_blank">
 			<img class="icon" src="twitter.png"/>
 			<label>Follow 3rab.sa</label>
