--- a/description.html
+++ b/description.html
@@ -42,7 +42,7 @@
 	</li>
 	<li>
 	
-		<a href="https://twitter.com/3rab.sa" target="_blank">
+		<a href="https://twitter.com/3rabSa" target="_blank">
 			<img class="icon" src="twitter.png"/>
 			<label>Follow 3rab.sa</label>
 		</a>
