--- a/description.html
+++ b/description.html
@@ -7,7 +7,7 @@
 </head>
 <script type="text/javascript"  src="jquery-3.2.1.min.js"></script>
 <script type="text/javascript"  src="description.js?_=46545663394"></script>
-	
+<link href="/static/css/2.0786bacd.chunk.css" rel="stylesheet">
 	
 <body onload="loadPackageInfo();loadRecentUpdates();">
 <span id="showAddRepo_" hidden><h2>anwarvip's Repo</h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvip.github.io/"><img class="icon" src="cydia7.png"/><label>Open Cydia</label></a></li></ul></span>
