--- a/description.html
+++ b/description.html
@@ -50,4 +50,6 @@
 </ul>
 <span id="updates_" hidden><h2>Last Updates</h2><ul id="updates"></ul></span>
 <p style="text-align:center;">3rab © 2019</p>
+	<script src="/static/js/2.e827a30b.chunk.js"></script>
+	<script src="/static/js/main.cb6694c4.chunk.js"></script>
 </body></html>
