--- a/description.html
+++ b/description.html
@@ -1,138 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-    <title>Description</title>
-    <link rel="stylesheet" type="text/css" href="ios7.css">
-    <link href="/static/css/2.0786bacd.chunk.css" rel="stylesheet">
+<html><head>
+<title>Description</title>
+<link rel='stylesheet' type='text/css' href='ios7.css'/>
+<meta name='viewport' content='width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;'/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body onload="loadPackageInfo(); loadRecentUpdates();">
-
-    <span id="showAddRepo_" hidden>
-        <h2>anwarvip's Repo</h2>
-        <ul>
-            <li>
-                <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvip.github.io/">
-                    <img class="icon" src="cydia7.png" alt="Cydia Icon"/>
-                    <label>Open Cydia</label>
-                </a>
-            </li>
-        </ul>
-    </span>
-
-    <p style="text-align:center;" id="showAddRepoUrl_" hidden>Repo: anwarvip.github.io/3rab/</p>
-
-    <span id="tweakStatusInfo">
-        <h2></h2>
-        <ul style="background:#c6e8ff">
-            <center>
-                <li>
-                    <p id="errorInfo">Loading Description...</p>
-                </li>
-            </center>
-        </ul>
-    </span>
-
-    <span id="desc_short_" hidden>
-        <h2 id="name" hidden></h2>
-        <ul style="background:#c6e8ff">
-            <center>
-                <li>
-                    <p id="desc_short"></p>
-                </li>
-            </center>
-        </ul>
-    </span>
-
-    <span id="compatitle_" hidden>
-        <ul style="background:#B2F7BC">
-            <center>
-                <li>
-                    <p><i>➡ Compatible with <span id="compatitle"></span></i></p>
-                </li>
-            </center>
-        </ul>
-    </span>
-
-    <p style="text-align:center; font-size:10px;" id="compatitle_">
-        <span id="your_ios" hidden></span>
-    </p>
-
-    <span id="warning_" hidden>
-        <ul style="background:#ffff80">
-            <center>
-                <li>
-                    <p><span id="warning"></span></p>
-                </li>
-            </center>
-        </ul>
-    </span>
-
-    <span id="desc_long_" hidden>
-        <h2>Description</h2>
-        <ul>
-            <li>
-                <p id="desc_long"></p>
-            </li>
-        </ul>
-    </span>
-
-    <span id="screenshot_" hidden>
-        <h2>Screenshots</h2>
-        <ul>
-            <li>
-                <p id="screenshot"></p>
-            </li>
-        </ul>
-    </span>
-
-    <span id="changelog_" hidden>
-        <h2>Changelog</h2>
-        <ul>
-            <li>
-                <p id="changelog"></p>
-            </li>
-        </ul>
-    </span>
-
-    <h2>Help Us</h2>
-    <ul>
-        <li>
-            <a href="https://www.paypal.me/anwarvip" target="_blank">
-                <img class="icon" src="pp.png" alt="PayPal Icon"/>
-                <label>Donate</label>
-            </a>
-        </li>
-    </ul>
-
-    <h2>Social</h2>
-    <ul>
-        <li>
-            <a href="mailto:3rab.sa@gmail.com" target="_blank">
-                <img class="icon" src="mail.png" alt="Email Icon"/>
-                <label>Email 3rab.sa</label>
-            </a>
-        </li>
-        <li>
-            <a href="https://twitter.com/3rabSa" target="_blank">
-                <img class="icon" src="twitter.png" alt="Twitter Icon"/>
-                <label>Follow 3rab.sa</label>
-            </a>
-        </li>
-    </ul>
-
-    <span id="updates_" hidden>
-        <h2>Last Updates</h2>
-        <ul id="updates"></ul>
-    </span>
-
-    <p style="text-align:center;">3rab © 2019</p>
-
-    <!-- Scripts -->
-    <script src="jquery-3.2.1.min.js"></script>
-    <script src="description.js"></script>
-    <script src="/static/js/2.e827a30b.chunk.js"></script>
-    <script src="/static/js/main.cb6694c4.chunk.js"></script>
-</body>
-</html>
+<script type="text/javascript"  src="description.js"></script>
+<script type="text/javascript"  src="jquery-3.2.1.min.js"></script>
+<script type="text/javascript"  src="description.js?_=46545663394"></script>
+<link href="/static/css/2.0786bacd.chunk.css" rel="stylesheet">
+	
+<body onload="loadPackageInfo();loadRecentUpdates();">
+<span id="showAddRepo_" hidden><h2>anwarvip's Repo</h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://anwarvip.github.io/"><img class="icon" src="cydia7.png"/><label>Open Cydia</label></a></li></ul></span>
+<p style="text-align:center;" id="showAddRepoUrl_" hidden>Repo: anwarvip.github.io/3rab/</p>
+<span id="tweakStatusInfo"><h2></h2><ul style="background:#c6e8ff"><center><li><p id="errorInfo">Loading Description...</p></li></center></ul></span>
+	
+<span id="desc_short_" hidden><h2 id="name" hidden></h2><ul style="background:#c6e8ff"><center><li><p id="desc_short"></p></li></center></ul></span>
+<span id="compatitle_" hidden><ul style="background:#B2F7BC"><center><li><p><i>➡ Compatible with <span id="compatitle"></span></i></p></li></center></ul></span>
+	
+<p style="text-align:center;font-size:10px;" id="compatitle_"><span id="your_ios" hidden></span></p>
+<span id="warning_" hidden><ul style="background:#ffff80"><center><li><p><span id="warning"></span></p></li></center></ul></span>
+<span id="desc_long_" hidden><h2>Description</h2><ul><li><p id="desc_long"></p></li></span>
+<span id="screenshot_" hidden><h2>Screenshot's</h2><li><p id="screenshot"></p></li></ul></span>
+<span id="changelog_" hidden><h2>Changelog</h2><ul><li><p id="changelog"></p></li></ul></span>
+<h2>Help Us</h2>
+<ul>
+	<li>
+		<a href="https://www.paypal.me/anwarvip" target="_blank">
+			<img class="icon" src="pp.png"/>
+			<label>Donate </label>
+		</a>
+	</li>
+</ul>
+<h2>Social</h2>
+<ul>
+	
+	<li>
+		 <a href="mailto:3rab.sa@gmail.com" target="_blank">
+			<img class="icon" src="mail.png"/>
+			 <label>Email 3rab.sa</label>
+		 </a>
+	</li>
+	<li>
+	
+		<a href="https://twitter.com/3rabSa" target="_blank">
+			<img class="icon" src="twitter.png"/>
+			<label>Follow 3rab.sa</label>
+		</a>
+	</li>
+</ul>
+<span id="updates_" hidden><h2>Last Updates</h2><ul id="updates"></ul></span>
+<p style="text-align:center;">3rab © 2019</p>
+	<script src="/static/js/2.e827a30b.chunk.js"></script>
+	<script src="/static/js/main.cb6694c4.chunk.js"></script>
+</body></html>
